# pgGraph

./: .dockerignore  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  META.json  Makefile  NOTICE  README.md  README_zh.md  SECURITY.md  docker-compose.yml  flake.nix  known-issues-completion-plan.md
.github/workflows/: release.yml
docs/: _meta.js  index.mdx  known-issues.mdx  quickstart.mdx  release-notes.mdx  roadmap.mdx
docs/contributor_guide/: _meta.js  architecture-tradeoffs.mdx  architecture.mdx  benchmarking.mdx  build-pipeline.mdx  (+11 more)
graph/: .gitignore  Cargo.toml  deny.toml  graph.control
graph/benches/: README.md  bfs_bench.rs  graph_gen.rs
graph/fuzz/: Cargo.toml
graph/fuzz/corpus/load_graph_file/: tiny_header
graph/fuzz/corpus/node_ref_string/: basic
graph/fuzz/corpus/parse_condition/: basic_gt
graph/fuzz/corpus/structured_filter/: operators
graph/fuzz/corpus/sync_properties/: basic
graph/fuzz/corpus/traverse_options/: basic
graph/fuzz/fuzz_targets/: gql_parser.rs  load_graph_file.rs  node_ref_string.rs  parse_condition.rs  structured_filter.rs  sync_properties.rs  traverse_options.rs
graph/proptest-regressions/: lib.txt
graph/sql/: bootstrap.sql
graph/src/: acl.rs  api_types.rs  bfs.rs  builder.rs  catalog.rs  config.rs  connected_components.rs  discover.rs  edge_store.rs  engine.rs  filter_index.rs  lib.rs  node_store.rs  path_finder.rs  persistence.rs  pg_test.rs  quote.rs  resolution_index.rs  safety.rs  sql_aggregation.rs  sql_build.rs  sql_filters.rs  sql_hydration.rs  sql_jobs.rs  sql_search.rs  sql_sync.rs  sql_traversal.rs  sync.rs  types.rs  unit_tests.rs
graph/src/catalog/: read.rs  validate.rs  write.rs
graph/src/cypher/: ast.rs  lexer.rs  lower.rs  mod.rs  parser.rs  semantics.rs
graph/src/gql/: ast.rs  errors.rs  lexer.rs  mod.rs  parser.rs
graph/src/pg_tests/: README.md  common.rs  components_jobs.rs  cypher.rs  discovery.rs  filters.rs  gql.rs  maintenance_admin.rs  registration_search.rs  sync_config_build.rs  synthetic_release.rs  traversal_api.rs  traversal_paths.rs  workflow_relationship_api.rs  workflow_search_api.rs  workflow_validation.rs
graph/src/projection/: chunk.rs  compact.rs  gc.rs  ingest.rs  layered.rs  manifest.rs  mod.rs  neighbors.rs  normalize.rs  recovery.rs  segment.rs  status.rs  test_contracts.rs  test_fixtures.rs  tx_delta.rs
graph/src/query/: catalog_snapshot.rs  execute.rs  explain.rs  logical_plan.rs  lower.rs  mod.rs  physical_plan.rs  semantics.rs  sqlpgq_adapter.rs  tests.rs  value.rs
graph/src/sql_facade/: admin.rs  components.rs  cypher.rs  discovery.rs  gql.rs  mod.rs  runtime.rs  search.rs  traversal.rs  workflow.rs
graph/tests/: README.md
graph/tests/heavy/: Dockerfile.pg-matrix  README.md  background_job_lock_regression.sh  backup_restore_validate.sh  build_lock_regression.sh  concurrency_stress.sh  crash_recovery.sh  cross_backend_durable_projection.sh  docker_smoke.sh  fresh_install_smoke.sh  function_metadata_audit.sh  gql_create_tx_lifecycle.sh  gql_delete_tx_lifecycle.sh  gql_merge_race.sh  gql_set_tx_lifecycle.sh  measure_build_rss.sh  measure_mmap_pss.sh  package_validate.sh  pg_upgrade_validate.sh  pgbench_sync.sql  playground_release_gate.py  playground_release_gate.sh  projection_recovery_gate.sh  read_latency_under_sync.sh  run_memory_sanitizers.sh  run_pg_matrix.sh  run_pg_matrix_docker.sh  run_pgbench_sync.sh  run_release_gate.sh  run_sqlstate_acl_boundary.sh  run_synthetic_release_evidence.sh  sqlstate_acl_boundary.sql  synthetic_release_smoke.sh  tx_delta_crash_recovery.sh  tx_delta_lifecycle.sh
graph/tests/pg_regress/: README.md
graph/tests/pg_regress/expected/: setup.out
sandbox/: cleanup.sh  readme.md  run_benchmarks.sh  start_playground.sh
scripts/: build_docker_pggraph_package.sh  build_pgxn_dist.sh  check_dependency_updates.py  check_doc_references.py  check_docs_drift.sh  check_rust_doc_map_drift.py  check_sql_api_drift.py  clean_generated_artifacts.sh  copy_pggraph_package_to_docker_postgres.sh  inspect_pggraph_artifact.py  install_into_docker_postgres.sh  quickstart.sh  scripts.md  validate_release.py
todo/: architecture-plan.md  build-sequence.md  end-state-spec.md  g1-public-exposure-gate-status-2026-05-30.md  gql-path-pattern-plan.md  measurements.md  mutable-graph-projections-todo.md  phase-1-readonly-gql-design.md  phase-2-mutable-overlay-writes-design.md  phase-3-advanced-read-sqlpgq-design.md  phase-4-advanced-writes-opencypher-design.md  progress.md  regression-baseline-2026-05-29.md  regression_report.md
(+20 files in other folders)
